--- a/AppConnectMe/app/src/main/res/values/strings.xml
+++ b/AppConnectMe/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="login_page_header">Login</string>
     <string name="login_btn_text">Login</string>
     <string name="account_login_check_text">No Account yet? Register Please</string>
+    <string name="forgot_password_text">Forgot Password? Recover it here</string>
 </resources>
