--- a/AppConnectMe/app/src/main/res/values/strings.xml
+++ b/AppConnectMe/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
   <string name="address_loading">Loading Address…</string>
   <string name="address_text">"Address: %1$s \nTimestamp: %2$tr"</string>
   <string name="address_not_found">No address found</string>
+  <string name="title_activity_maps">Map</string>
 
 </resources>
