--- a/AppConnectMe/app/src/main/res/values/strings.xml
+++ b/AppConnectMe/app/src/main/res/values/strings.xml
@@ -12,4 +12,19 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+  <!-- Location Strings -->
+  <string name="location_permission_denied">getLocation: permissions denied</string>
+  <string name="location_text">"Latitude: %1$.4f; Longitude: %2$.4f; Timestamp: %3$tr"</string>
+  <string name="location_not_found">Location not found</string>
+  <string name="location_not_changed">Location not changed</string>
+
+  <!-- FetchAddress Strings -->
+  <string name="service_not_available">Service not available</string>
+  <string name="invalid_lat_long_used">Invalid coordinates used</string>
+  <string name="address_loading">Loading Address…</string>
+  <string name="address_text">"Address: %1$s \nTimestamp: %2$tr"</string>
+  <string name="address_not_found">No address found</string>
+  <string name="title_activity_maps">Map</string>
+
 </resources>
